Fix button spacing for charts

--- a/ckanext/querytool/fanstatic/less/inc/query.less
+++ b/ckanext/querytool/fanstatic/less/inc/query.less
@@ -27,12 +27,13 @@
 }
 
 .chart-actions {
-  display: flex;
+  display: inline-block;
   justify-content: space-between;
   bottom: 0;
-  width: 100%;
   &.inline {
     >li {
+      margin-right: 12px;
+      margin-left: 12px;
       &:last-child {
         padding-right: 0;
       }
